--- a/style.css
+++ b/style.css
@@ -150,6 +150,13 @@ section{
     border: 1px solid #fff;
     transform: translateY(8px);
 }
+@media (max-width: 1749px) {
+    .ctaa {
+        margin-left: 0;
+        margin-top: 20px;
+        transition: .2s;
+    }
+}
 @media (max-width: 1535px) {
     header{
         padding: 15px 3%;
@@ -164,10 +171,20 @@ section{
         right: 3%;
         transition: .2s;
     }      
+    .ctaa {
+        margin-left: 0;
+        margin-top: 20px;
+        transition: .2s;
+    }
 }
 @media (max-width: 1460px){
     section{
         padding: 0 12%;
+        transition: .2s;
+    }
+    .ctaa {
+        margin-left: 0;
+        margin-top: 20px;
         transition: .2s;
     }
 }
